--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -1,4 +1,4 @@
-<div class="page-wrapper" ng-controller="EmployeesController" ng-init="getUserId('{{user._id}}')">
+<div class="page-wrapper" ng-controller="BillsController" ng-init="getUserId('{{user._id}}')">
     <!-- MENU SIDEBAR-->
     <aside class="menu-sidebar2">
         <div class="logo">
@@ -28,10 +28,10 @@
                             <i class="fa fa-dollar"></i>Liquidaciones
                         </a>
                     </li>
-                    <li class="active">
-                        <a>
+                    <li>
+                        <span class="active">
                             <i class="fa fa-list-alt"></i>Facturas
-                        </a>
+                        </span>
                     </li>
                 </ul>
             </nav>
