--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -13,10 +13,10 @@
             </div>
             <nav class="navbar-sidebar2">
                 <ul class="list-unstyled navbar__list">
-                    <li class="active">
-                        <a>
+                    <li>
+                        <span class="active">
                             <i class="fa fa-user"></i>Empleados
-                        </a>
+                        </span>
                     </li>
                     <li>
                         <a href="/updates">
