--- a/views/payroll.hbs
+++ b/views/payroll.hbs
@@ -23,10 +23,10 @@
                             <i class="fa fa-check-square"></i>Novedades
                         </a>
                     </li>
-                    <li class="active">
-                        <a>
+                    <li>
+                        <span class="active">
                             <i class="fa fa-dollar"></i>Liquidaciones
-                        </a>
+                        </span>
                     </li>
                     <li>
                         <a href="/bills">
