--- a/views/updates.hbs
+++ b/views/updates.hbs
@@ -18,10 +18,10 @@
                             <i class="fa fa-user"></i>Empleados
                         </a>
                     </li>
-                    <li class="active">
-                        <a>
+                    <li>
+                        <span class="active">
                             <i class="fa fa-check-square"></i>Novedades
-                        </a>
+                        </span>
                     </li>
                     <li>
                         <a href="/payroll">
@@ -89,7 +89,7 @@
                                             <tr>
                                                 <td>Empleado</td>
                                                 <td>Tipo de novedad</td>
-                                                <td>Monto / Cantidad</td>
+                                                <td>Monto/Cantidad</td>
                                                 <td>Fecha de creación</td>
                                                 {{!-- <td>Acciones</td> --}}
                                             </tr>
