--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -101,7 +101,7 @@
                                             <tr ng-repeat="bill in bills">
                                                 <td>
                                                     <div class="table-data__info">
-                                                        <span ng-bind="bill.number"></span>
+                                                        <span ng-bind="bill.bill_number"></span>
                                                     </div>
                                                 </td>
                                                 <td>
