--- a/views/updates.hbs
+++ b/views/updates.hbs
@@ -91,7 +91,7 @@
                                                 <td>Tipo de novedad</td>
                                                 <td>Monto/Cantidad</td>
                                                 <td>Fecha de creación</td>
-                                                {{!-- <td>Acciones</td> --}}
+                                                <td>Acciones</td>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -124,16 +124,13 @@
                                                         <span ng-bind="item.update.creation_date"></span>
                                                     </div>
                                                 </td>
-                                                {{!-- <td>
+                                                <td>
                                                     <div class="table-data__info">
-                                                        <button class="action-icon" data-toggle="modal" data-target="#largeModal" ng-click="getUpdate(item.update._id)">
-                                                            <i class="fa fa-edit"></i>
-                                                        </button>
-                                                        <button class="action-icon" title="Eliminar">
+                                                        <button class="action-icon" data-toggle="modal" data-target="#largeModal" ng-click="getUpdate(item.update._id)" title="Eliminar novedad">
                                                             <i class="fa fa-trash"></i>
                                                         </button>
                                                     </div>
-                                                </td> --}}
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -148,44 +145,25 @@
         </section>
         <!-- END PAGE CONTAINER-->
 
-        <!-- UPDATE REGISTER -->
-        {{!-- <div class="modal fade" id="largeModal" tabindex="-2" role="dialog" aria-labelledby="largeModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
+        <!-- DELETE UPDATE -->
+        <div class="modal fade" id="smallModal" tabindex="-2" role="dialog" aria-labelledby="smallModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="largeModalLabel">Modificar novedad de <span ng-bind="form.name"></span></h5>
+                        <h5 class="modal-title" id="largeModalLabel">Esta seguro que desea eliminar el empleado <span ng-bind="form.name"></span></h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label>Tipo de novedad</label>
-                                <select ng-model="form.update" name="select" id="select" class="form-control">
-                                    <option value="">Elija un tipo de novedad</option>
-                                    <option value="salary_change" ng-if="form.payroll_type == 'monthly'">Cambio de Sueldo</option>
-                                    <option value="per_hour_change" ng-if="form.payroll_type == 'per_hour'">Cambio de valor por hora</option>
-                                    <option value="worked_hours" ng-if="form.payroll_type == 'per_hour'">Horas trabajadas</option>
-                                    <option value="absense_days" ng-if="form.payroll_type == 'monthly'">Días ausentes</option>
-                                    <option value="vacation_days" ng-if="form.payroll_type == 'monthly'">Días de vacaciones</option>
-                                    <option value="bonus">Bono</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label>Monto / Cantidad</label>
-                                <input ng-model="updateForm.mount" class="au-input au-input--full" type="number" name="mount" placeholder="Valor bono, cantidad días o cantidad horas">
-                            </div>
-                        </form>
-                    </div>
+
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-modal-btn2">Cancelar</button>
-                        <button type="button" class="btn btn-primary" ng-click="newUpdate()">Guardar</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-modal-btn">Cancelar</button>
+                        <button type="button" class="btn btn-primary" ng-click="deleteUpdate()">Eliminar</button>
                     </div>
                 </div>
             </div>
-        </div> --}}
-        <!-- END UPDATE REGISTER -->
+        </div>
+        <!-- END DELETE UPDATE -->
     </div>
 </div>
