update register and updates

--- a/views/payroll.hbs
+++ b/views/payroll.hbs
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-
+        </section>
         <!-- END PAGE CONTAINER-->
     </div>
 
