--- a/views/register.hbs
+++ b/views/register.hbs
@@ -53,6 +53,18 @@
                                 <label>Ingresos brutos</label>
                                 <input ng-model="form.gross_income" class="au-input au-input--full" type="text" name="gross_income" placeholder="Ingresos brutos" ng-required="form.person_type == 'legal_entity'">
                             </div>
+                            <div class="form-group">
+                                <label>Día de pago por defecto</label>
+                                <select ng-model="form.pay_date" name="select" id="select" class="form-control">
+                                    <option value="">Seleccione una opción</option>
+                                    <option value="0">Último día del mes</option>
+                                    <option value="1">1° día del mes siguiente</option>
+                                    <option value="2">2° día del mes siguiente</option>
+                                    <option value="3">3° día del mes siguiente</option>
+                                    <option value="4">4° día del mes siguiente</option>
+                                    <option value="5">5° día del mes siguiente</option>
+                                </select>
+                            </div>
                             <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">register</button>
                         </form>
                         <div class="register-link">
