--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -140,9 +140,7 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="table-data__info">
-                                                        <span ng-bind="bill.status"></span>
-                                                    </div>
+                                                    <span ng-if="bill.status == 'payment pending'" class="state pending">Pendiente</span>
                                                 </td>
                                             </tr>
                                         </tbody>
