--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -64,6 +64,7 @@
         <script src="/js/controllers/UpdatesController.js"></script>
         <script src="/js/controllers/PayrollController.js"></script>
         <script src="/js/controllers/BillsController.js"></script>
+        <script src="/js/controllers/ProfileController.js"></script>
 </body>
 
 </html>
