--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,11 +18,6 @@
                                 <label>Contraseña</label>
                                 <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña">
                             </div>
-                            <div class="login-checkbox">
-                                {{!-- <label>
-                                    <a href="#">Forgotten Password?</a>
-                                </label> --}}
-                            </div>
                             <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">Ingresar</button>
                         </form>
                         <div class="register-link">
@@ -36,5 +31,7 @@
             </div>
         </div>
     </div>
-
+    <div class="alert alert-danger" role="alert" ng-if="showError">
+        No se pudo ingresar en este momento, pruebe más tarde
+    </div>
 </div>
