--- a/views/updates.hbs
+++ b/views/updates.hbs
@@ -33,6 +33,11 @@
                             <i class="fa fa-list-alt"></i>Facturas
                         </a>
                     </li>
+                    <li>
+                        <a href="/profile">
+                            <i class="fa fa-user"></i>Cuenta
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
