--- a/views/payroll.hbs
+++ b/views/payroll.hbs
@@ -100,7 +100,7 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr ng-repeat="payroll in payroll">
+                                        <tr ng-repeat="payroll in payrolls">
                                             <td>
                                                 <div class="table-data__info">
                                                     <h6 ng-bind="payroll.employee_name"></h6>
@@ -114,12 +114,12 @@
                                             </td>
                                             <td>
                                                 <div class="table-data__info">
-                                                    <span ng-bind="payroll.salary.gross_income">Mensual</span>
+                                                    <span ng-bind="payroll.salary.gross_income"></span>
                                                 </div>
                                             </td>
                                             <td>
                                                 <div class="table-data__info">
-                                                    <span ng-bind="payroll.salary.gross_income">Mensual</span>
+                                                    <span ng-bind="payroll.salary.net_income"></span>
                                                 </div>
                                             </td>
                                             <td>
