--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,7 @@
     <link href="/vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
+    <link rel="shortcut icon" type="image/png" href="/images/Graphicloads-Flat-Finance-Dollar.ico"/>
     <link href="/vendor/css/theme.css" rel="stylesheet" media="all">
     <link href="/stylesheets/style.css" rel="stylesheet" media="all">
 </head>
