--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -15,7 +15,7 @@
                 <ul class="list-unstyled navbar__list">
                     <li>
                         <a href="/employees">
-                            <i class="fa fa-user"></i>Empleados
+                            <i class="fa fa-users"></i>Empleados
                         </a>
                     </li>
                     <li>
@@ -68,7 +68,7 @@
         <!-- END BREADCRUMB-->
 
         <!-- HEADER -->
-        <header class="header-desktop2">
+        <header class="header-desktop2 fading">
             <div class="section__content section__content--p30">
                 <div class="container-fluid">
                     <div class="header-wrap2">
@@ -145,7 +145,7 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <span ng-if="bill.status == 'payment pending'" class="state pending">Pendiente</span>
+                                                    <span ng-if="bill.status == 'pending'" class="state pending">Pendiente</span>
                                                 </td>
                                             </tr>
                                         </tbody>
