--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -15,18 +15,18 @@
                 <ul class="list-unstyled navbar__list">
                     <li>
                         <a href="/employees">
-                            <i class="fa fa-user"></i>Empleados
+                            <i class="fa fa-users"></i>Empleados
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/updates">
+                            <i class="fa fa-check-square"></i>Novedades
                         </a>
                     </li>
                     <li>
                         <a href="/payroll">
                             <i class="fa fa-dollar"></i>Liquidaciones
                         </a>
-                    </li>
-                    <li>
-                        <span class="active">
-                            <i class="fa fa-dollar"></i>Liquidaciones
-                        </span>
                     </li>
                     <li>
                         <a href="/bills">
@@ -62,7 +62,7 @@
                                 </div>
                                 <button class="au-btn au-btn-icon au-btn--red" type="button" data-toggle="modal"
                                     data-target="#smallModal" style="background-color: #dc3545 !important">
-                                    Eliminar cuenta
+                                    <i class="zmdi zmdi-delete"></i>Eliminar Cuenta
                                 </button>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
         <!-- END BREADCRUMB-->
 
         <!-- HEADER -->
-        <header class="header-desktop2">
+        <header class="header-desktop2 fading">
             <div class="section__content section__content--p30">
                 <div class="container-fluid">
                     <div class="header-wrap2">
