--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -8,13 +8,13 @@
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
             <div class="account2">
-                <h4 class="name">{{user.name}}</h4>
+                <h4 class="name fade-text">{{user.name}}</h4>
                 <a href="/logout">Cerrar sesión</a>
             </div>
             <nav class="navbar-sidebar2">
                 <ul class="list-unstyled navbar__list">
                     <li>
-                        <span class="active">
+                        <span class="active fade-background white-text">
                             <i class="fa fa-users"></i>Empleados
                         </span>
                     </li>
@@ -89,7 +89,7 @@
                         <div class="col-xl-12">
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
-                                <h3 class="title-3 m-b-30"><i class="zmdi zmdi-account-box-o"></i>Empleados</h3>
+                                <h3 class="title-3 m-b-30"><i class="zmdi zmdi-accounts"></i>Empleados</h3>
                                 <div class="table-responsive table-data">
                                     <table class="table" ng-if="employees.length != 0">
                                         <thead>
