--- a/views/payroll.hbs
+++ b/views/payroll.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
             <div class="account2">
-                <h4 class="name">{{user.name}}</h4>
+                <h4 class="name fade-text">{{user.name}}</h4>
                 <a href="/logout">Cerrar sesión</a>
             </div>
             <nav class="navbar-sidebar2">
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li>
-                        <span class="active">
+                        <span class="active fade-background white-text">
                             <i class="fa fa-dollar"></i>Liquidaciones
                         </span>
                     </li>
