--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
             <div class="account2">
-                <h4 class="name">{{user.name}}</h4>
+                <h4 class="name fade-text">{{user.name}}</h4>
                 <a href="/logout">Cerrar sesión</a>
             </div>
             <nav class="navbar-sidebar2">
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li>
-                        <span class="active">
+                        <span class="active fade-background white-text">
                             <i class="fa fa-user"></i>Cuenta
                         </span>
                     </li>
@@ -61,7 +61,7 @@
                                     </ul>
                                 </div>
                                 <button class="au-btn au-btn-icon au-btn--red" type="button" data-toggle="modal"
-                                    data-target="#smallModal" style="background-color: #dc3545 !important">
+                                    data-target="#smallModal">
                                     <i class="zmdi zmdi-delete"></i>Eliminar Cuenta
                                 </button>
                             </div>
@@ -91,7 +91,7 @@
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
                                 <h3 class="title-3 m-b-30">
-                                    <i class="zmdi zmdi-money-box"></i>Datos de la cuenta
+                                    <i class="zmdi zmdi-account"></i>Datos de la cuenta
                                 </h3>
                                 <form ng-submit="updateClient()" style="padding: 0 40px">
                                     <div class="form-group">
