--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,11 +1,11 @@
 <div class="page-wrapper" ng-controller="RegisterController">
     <div class="page-content--bge5">
-        <div class="container login">
+        <div class="container login fullfading">
             <div class="login-wrap">
                 <div class="login-content">
                     <div class="login-logo">
                         <a href="#">
-                            <h1>¡Sueldos Ya!</h1>
+                            <h1 class="titlefading">¡Sueldos Ya!</h1>
                         </a>
                     </div>
                     <div class="login-form">
