--- a/views/register.hbs
+++ b/views/register.hbs
@@ -23,6 +23,10 @@
                                 <input ng-model="form.name" class="au-input au-input--full" type="text" name="name" placeholder="Nombre" required>
                             </div>
                             <div class="form-group">
+                                <label>Clave Bancaria Uniforme (CBU)</label>
+                                <input ng-model="form.cbu" class="au-input au-input--full" type="text" name="name" placeholder="CBU" required>
+                            </div>
+                            <div class="form-group">
                                 <label>Entidad legal</label>
                                 <div class="form-check">
                                     <div class="radio">
@@ -70,7 +74,7 @@
                         <div class="register-link">
                             <p>
                                 ¿Ya tiene una cuenta?
-                                <a href="/login">Log In</a>
+                                <a href="/login">Accede</a>
                             </p>
                         </div>
                     </div>
