--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -169,7 +169,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Dirección</label>
-                                <input ng-model="form.address" class="au-input au-input--full" type="text" name="address" placeholder="Dirección de vivienda del empleado...">
+                                <input ng-model="form.address" class="au-input au-input--full" type="text" name="address" placeholder="Dirección de vivienda del empleado..." required>
                             </div>
                             <div class="form-group">
                                 <label>Fecha de Cumpleaños</label>
