--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -96,7 +96,7 @@
                                 <form ng-submit="updateClient()" style="padding: 0 40px">
                                     <div class="form-group">
                                         <label>Contraseña</label>
-                                        <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
+                                        <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña">
                                     </div>
                                     <div class="form-group">
                                         <label>Nombre</label>
